---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2025-04-24
  Changes:
    - Buff wooden ammo to deal 4 damage instead of 3
    - Reduce default firerate and range nerf from -15% to -10%
  Compatibility:
    - Add compatibility for Voidcraft
    - Add compatibility for Smart rounds magazines from Cupric Asteroids
---------------------------------------------------------------------------------------------------
Version: 2.4.3
  Compatibility:
    - Use crushed coal in splinter bolts from Crushing Industry
---------------------------------------------------------------------------------------------------
Version: 2.4.2
  Bugfixes:
    - Merge scorpion bolt and splinter bolt into a singular kind of rocket launcher ammo
---------------------------------------------------------------------------------------------------
Version: 2.4.1
  Bugfixes:
    - Remove unused "Carbon Military" setting
---------------------------------------------------------------------------------------------------
Version: 2.4.0
  Changes:
    - Give wooden armor 2/60% acid resistance
    - Remove Hard mode, with Wooden Universe it's really not necessary
    - Submachine guns, Shotguns, and Light armor now cost 10 Steel plates even without Hard mode
    - Heavy armor now costs 20 Plastic bars even without Hard mode
---------------------------------------------------------------------------------------------------
Version: 2.3.5
  Bugfixes:
    - Hide effects in factoriopedia
---------------------------------------------------------------------------------------------------
Version: 2.3.4
  Minor Features:
    - Add setting to make vanilla ammo not cost wood ammo
---------------------------------------------------------------------------------------------------
Version: 2.3.3