@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.1
 Date: ????
-  Changes:
+  Compatibility:
+    - Voidcraft: Add fluxize and coherize recipe variants
 ---------------------------------------------------------------------------------------------------
 Version: 2.5.0
 Date: 2025-04-24
